ajouter swagger de itineraire
